karnc/tests/fixtures/negative/118_queue_duplicate_consumer/src/svc.karn
context svc

service worker {
  on queue "q" (message: String) -> Effect[Result[(), String]] {
    Ok(())
  }

  on queue "q" (message: String) -> Effect[Result[(), String]] {
    Ok(())
  }
}
